--- a/FirstMVC/Views/Category/GetCategoryList.cshtml
+++ b/FirstMVC/Views/Category/GetCategoryList.cshtml
@@ -15,10 +15,13 @@
     </tr>
     @foreach (var item in Model)
     {
-        <tr>
-            <td>@item.CategoryID</td>
-            <td>@item.CategoryName</td>
-            <td>@item.CategoryStatus</td>
-        </tr>
+<tr>
+    <td>@item.CategoryID</td>
+    <td>@item.CategoryName</td>
+    <td>@item.CategoryDescription</td>
+    <td>@item.CategoryStatus</td>
+</tr>
     }
 </table>
+<br />
+<a href="/Category/AddCategory" class="btn-warning">Yeni Kategori</a>
